--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "gitpython>=3.1.0",
     "structlog>=24.0.0",
     "anthropic>=0.75.0",
+    "certifi>=2026.1.4",
 ]
 
 [project.optional-dependencies]
