Multi-agents with character

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,14 @@
+# Required
 ANTHROPIC_API_KEY=
 GITHUB_TOKEN=
+
+# Legacy single-bot mode (optional, for backward compatibility)
 DISCORD_BOT_TOKEN=
+
+# Multi-agent mode - one token per agent/bot
+DISCORD_BACKEND_BOT_TOKEN=   # Rick (Backend Dev)
+DISCORD_DEVOPS_BOT_TOKEN=    # Judy (DevOps)
+
+# Future agents (uncomment when adding)
+# DISCORD_FRONTEND_BOT_TOKEN=  # Wednesday (Frontend Dev)
+# DISCORD_SECURITY_BOT_TOKEN=  # Elliot (Security)
